Datafono/Z90PD SDK v1.02/win64-dll/dcic32.h

	//
	HANDLE __stdcall IC_InitComm(__int16 port);
	__int16 __stdcall IC_ExitComm(HANDLE idComDev);
	__int16 __stdcall IC_Status(HANDLE idComDev);
	__int16 __stdcall IC_Down(HANDLE idComDev);
	
	
	//
	__int16 __stdcall IC_Pushout(HANDLE idComDev);
	__int16 __stdcall IC_InitType (HANDLE idComDev, __int16 type);
	__int16 __stdcall IC_Read(HANDLE idComDev, __int16 offset, __int16 len, unsigned char * databuffer);
	__int16 __stdcall IC_Read_Float(HANDLE idComDev, __int16 offset, float *fdata);
	__int16 __stdcall IC_Read_Int(HANDLE idComDev, __int16 offset, long *fdata);
	__int16 __stdcall IC_Write_Int(HANDLE idComDev, __int16 offset, long fdata);
	__int16 __stdcall IC_ReadProtection(HANDLE idComDev, __int16 offset, __int16 len, unsigned char* protbuffer);
	__int16 __stdcall IC_ReadWithProtection(HANDLE idComDev, __int16 offset, __int16 len, unsigned char* protbuffer);
	__int16 __stdcall IC_Write(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *writebuffer);
	__int16 __stdcall IC_Write_Float(HANDLE idComDev, __int16 offset, float fdata);
	__int16 __stdcall IC_WriteProtection(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *protbuffer);
	__int16 __stdcall IC_WriteWithProtection(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *writebuffer);
	__int16 __stdcall IC_ReadCount_SLE4442(HANDLE idComDev);
	__int16 __stdcall IC_CheckPass_SLE4442(HANDLE idComDev, unsigned char* password);
	__int16 __stdcall IC_ChangePass_SLE4442(HANDLE idComDev, unsigned char*password);
	//
	__int16 __stdcall IC_CheckPass_4442hex(HANDLE idComDev, unsigned char*password);
	__int16 __stdcall IC_ChangePass_4442hex(HANDLE idComDev, unsigned char*password);
	//
	__int16 __stdcall IC_ReadCount_SLE4428(HANDLE idComDev);
	__int16 __stdcall IC_CheckPass_SLE4428(HANDLE idComDev, unsigned char* password);
	__int16 __stdcall IC_ChangePass_SLE4428(HANDLE idComDev, unsigned char* password);
	//
	__int16 __stdcall IC_CheckPass_4428hex(HANDLE idComDev, unsigned char* password);
	__int16 __stdcall IC_ChangePass_4428hex(HANDLE idComDev, unsigned char* password);
	//
	__int16 __stdcall IC_Erase(HANDLE idComDev, __int16 offset, __int16 len);
	__int16 __stdcall IC_Erase_102(HANDLE idComDev, __int16 offset, __int16 len);
	__int16 __stdcall IC_Fuse_102(HANDLE idComDev);
	__int16 __stdcall IC_ReadCount_102(HANDLE idComDev);
	
	__int16 __stdcall IC_CheckPass_102(HANDLE idComDev, unsigned char*password);
	__int16 __stdcall IC_ChangePass_102(HANDLE idComDev, unsigned char*password);
	__int16 __stdcall IC_CheckAZPass_102(HANDLE idComDev, __int16 zone, unsigned char*password);
	__int16 __stdcall IC_ChangeAZPass_102(HANDLE idComDev, __int16 zone, unsigned char*password);
	//
	__int16 __stdcall IC_CheckPass_102hex(HANDLE idComDev, unsigned char*password);
	__int16 __stdcall IC_ChangePass_102hex(HANDLE idComDev, unsigned char*password);
	__int16 __stdcall IC_CheckAZPass_102hex(HANDLE idComDev, __int16 zone, unsigned char*password);
	__int16 __stdcall IC_ChangeAZPass_102hex(HANDLE idComDev, __int16 zone, unsigned char*password);
	
	__int16 __stdcall IC_Fuse_1604(HANDLE idComDev);
	__int16 __stdcall IC_ReadCount_1604(HANDLE idComDev, __int16 area);
	__int16 __stdcall IC_CheckPass_1604(HANDLE idComDev, __int16 area, unsigned char*password);
	__int16 __stdcall IC_ChangePass_1604(HANDLE idComDev, __int16 area, unsigned char*password);
	//
	__int16 __stdcall IC_CheckPass_1604hex(HANDLE idComDev, __int16 area, unsigned char*password);
	__int16 __stdcall IC_ChangePass_1604hex(HANDLE idComDev, __int16 area, unsigned char*password);
	
	//4406
	__int16 __stdcall IC_RValue(HANDLE idComDev);
	__int16 __stdcall IC_DEValue(HANDLE idComDev, __int16 num);
	
	//
	__int16 __stdcall IC_Write24(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *writebuffer);
	__int16 __stdcall IC_Write64(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *writebuffer);
	//hex read and write.
	__int16 __stdcall IC_Write_Hex(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *writebuffer);
	__int16 __stdcall IC_Read_Hex(HANDLE idComDev, __int16 offset, __int16 len, unsigned char * databuffer);
	__int16 __stdcall IC_Write24_Hex(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *writebuffer);
	__int16 __stdcall IC_Write64_Hex(HANDLE idComDev, __int16 offset, __int16 len, unsigned char *writebuffer);
	//
	__int16 __stdcall IC_DirectRead(HANDLE idComDev, __int16 page, __int16 offset, __int16 bytes, unsigned char *buff);
	__int16 __stdcall IC_WriteByBuffer(HANDLE idComDev, __int16 page, __int16 offset, __int16 bytes, unsigned char *buff);
	__int16 __stdcall IC_DirectWrite(HANDLE idComDev, __int16 page, __int16 offset, __int16 bytes, unsigned char *buff);
	//
	__int16 __stdcall IC_DirectRead_Hex(HANDLE idComDev, __int16 page, __int16 offset, __int16 bytes, unsigned char *buff);
	__int16 __stdcall IC_DirectWrite_Hex(HANDLE idComDev, __int16 page, __int16 offset, __int16 bytes, unsigned char *writebuffer);
	__int16 __stdcall IC_WriteByBuffer_Hex(HANDLE idComDev, __int16 page, __int16 offset, __int16 bytes, unsigned char *writebuffer);
	
	/*
	认证的使用过程：
	1。产生Q0为一个随机数。
	2。使用IC_InitAuth（Q0）将Q0送入卡中。
	3。从卡中读出Ci用于下一步的密钥初始化。
	4。使用SetInit(Ci，Gc，Q0), 其中Gc为用户密钥，由用于掌握，必须和卡中的Gc相同，Q0在第一步中已经产生。
	5。使用Authenticate（Q1，Q2）产生Q1，Q2，用于下一步的认证过程
	6。使用IC_CheckAuth（Q1）将Q1送入卡中认证。
	7。从卡中读出Ci和Q2比较，如果相同则认证通过。
	
	  注意：在此过程中Gc为用户已知密钥
	*/
	//2个工具函数，用于字符串格式的转换
	__int16 __stdcall hex2asc(unsigned char *strhex, unsigned char *strasc, __int16 length);
	__int16 __stdcall asc2hex(unsigned char *strasc, unsigned char *strhex, __int16 length);